# progress_monitoring

./: .clang-format  CMakeLists.txt  LICENSE  README.md  async_main.cpp  cache_main.cpp  cuda_computation.cu  cuda_computation.h  cuda_main.cpp  graph_main.cpp  main.cpp  monitoring_main.cpp  multi_thread_main.cpp  single_thread_main.cpp  stack_main.cpp  statistics_main.cpp  todo.md
benchmark/: general_benchmark.cpp  monitoring_benchmark.cpp
examples/: shm_main.cpp
graph/: <stdin>.callgraph.dot  callgraph.py  demangled_graph.dot  graph_lib.cpp  graph_main.cpp  graph_main_calls.txt
include/: cache.hpp  monitoring.hpp  monitoring_interface.hpp  singleton.hpp  source_location.hpp  stack.hpp  time.hpp  types.hpp
include/cache/: cache.hpp  control_block.hpp  counting_queue.hpp  ref.hpp  strong_ref.hpp  weak_cache.hpp  weak_ref.hpp
include/monitoring/: api.hpp  config.hpp  macros.hpp  report.hpp  source_location.hpp  statistics.hpp  stats.hpp  thread_monitor.hpp  thread_state.hpp  time.hpp
include/stack/: allocator.hpp  api.hpp  entry.hpp  guard.hpp  stack.hpp
include/state/: atomic_state.hpp  single_wait.hpp
src/: monitoring.cpp
test/: atomic_state.cpp  monitoring.cpp  wait_notify.cpp
